# stock-strategy

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  requirements_doc.md  setup.py  strategy_guide.md  trading_strategy.py
config/: default_config.yaml
docs/: architecture.md  development_notes.md  requirements.md
examples/: run_strategy.py
src/analysis/: backtest.py  performance.py
src/data/: data_loader.py
src/indicators/: momentum.py  technical.py  trend.py  volatility.py
src/strategies/: base.py  base_strategy.py  factor_strategy.py  ma_strategy.py  mean_reversion.py  ml_strategy.py  momentum.py  trend_following.py  volume_breakout.py
src/ui/: app.py
src/ui/components/: sidebar_nav.py  strategy_config.py
src/ui/pages/: dashboard.py  fundamental_analysis.py  portfolio.py  portfolio_analysis.py  risk_management.py  stock_screener.py  strategy_center.py  technical_analysis.py
src/utils/: cache.py  config.py  connection_pool.py  decorators.py  logger.py  profiler.py  risk_manager.py  validators.py
tests/: test_core.py
tests/test_indicators/: test_technical.py
tests/test_strategies/: test_ma_strategy.py
ui/: app.py
ui/pages/: market_overview.py  overview.py  screening.py  single_stock.py
